# test_project

./: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  image.syscfg
apps/: CMakeLists.txt
apps/test_app/: CMakeLists.txt
cmake/: cc32xx-config.cmake
common/: CMakeLists.txt  main_freertos.c
modules/bq25890/: CMakeLists.txt  bq25890.cpp
modules/bq25890/test/: CMakeLists.txt  i2ctmp.syscfg
modules/bq25890/test/MCU+Image/: power_efficiency_test_linkInfo.xml  sources.mk
modules/uart2echo/: CMakeLists.txt
modules/uart2echo/test/: uart2echo.syscfg
power_efficiency_test/: .ccsproject  bq25890.h  bq25890_defs.h  i2ctmp.cpp  main_nortos.cpp
power_efficiency_test/MCU+Image/: ccsObjs.opt  i2ctmp_CC3235SF_LAUNCHXL_nortos_ticlang_linkInfo.xml  makefile  subdir_rules.mk  subdir_vars.mk
power_efficiency_test/MCU+Image/syscfg/: ti_drivers_config.c  ti_drivers_config.h  ti_drivers_net_wifi_config.json
power_efficiency_test/MCU+Image/syscfg/sl_image/: ImageConfig.xml
power_efficiency_test/MCU+Image/syscfg/sl_image/Output/: Programming.sli  Programming.ucf
